# storitch

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  compose.yml  dev_config.yml  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  storitch.sublime-project  storitch.sublime-workspace
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
conf/: mime.types  nginx.conf  policy.xml  storitch_config.py  supervisor.conf
docker/: Dockerfile  nginx.conf  storitch.yaml  storitch_config.py  supervisor.conf
src/storitch/: __init__.py  folder_store.py  image.py
storitch/: __init__.py  app.py  cache_cleanup.py  config.py  decorators.py  identify_file.py  ignore_errors.py  io_sighandler.py  logger.py  main.py  permanent_store.py  runner.py  schemas.py  security.py  store_file.py  utils.py
storitch/filetype_matchers/: __init__.py  m3shape_dcm.py
storitch/handlers/: store.py
storitch/routes/: dicom_frames.py  dicom_frames_routes.py  download.py  download_convert_routes.py  file_info.py  file_info_routes.py  health.py  health_routes.py  multipart.py  multipart_routes.py  session.py  session_routes.py
tests/: upload.py
tests/src/storitch/: test_app.py  test_folder_store.py  test_image.py
tests/storitch/: test_utils.py
tests/storitch/handlers/: test_store.py
tests/storitch/routes/: test_dicom_frames.py  test_download.py  test_health.py  test_metadata.py  test_multipart.py  test_session.py  test_thumbnail.py
