[project]
name = "storitch"
version = "2.0"
description = "Simple file upload"
dependencies = [
    "fastapi==0.115.12",
    "pyyaml==6.0.2",
    "click==8.2.1",
    "aiofile==3.9.0",
    "uvicorn==0.34.2",
    "python-multipart==0.0.20",
    "pydantic-settings==2.9.1",
    "pillow==11.2.1",
    "pydicom==3.0.1",
    "filetype==1.2.0",
    "highdicom[libjpeg]==0.25.1",
    "sentry-sdk==2.29.1",
]
requires-python = ">=3.13"

[project.optional-dependencies]
dev = ["requests==2.32.3", "httpx==0.28.1", "pytest==8.3.5"]


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core>=3.2,<4"]

[tool.ruff]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
